# llm-llama

./: README.md  docker-compose.local.vllm.yml  package-lock.json
backend/: main.py  pyproject.toml
backend/app/: settings.py
backend/app/api/routers/: llama_chat.py
frontend/: package-lock.json  package.json
frontend/app/components/ui/chat/: chat-input.tsx  chat-message.tsx  markdown.tsx
